[project]
name = "lithuanian-eid-toolbox"
version = "0.1.0"
description = ""
authors = [
    {name = "Tadas Sasnauskas",email = "tadas@yoyo.lt"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pyscard (>=2.3.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "lithuanian_eid_toolbox", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
