[project]
name = "lithuanian-eid"
version = "0.1.0"
description = ""
authors = [
    {name = "Tadas Sasnauskas",email = "tadas@yoyo.lt"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pyscard (>=2.3.1,<3.0.0)",
    "pygobject (>=3.56.0,<4.0.0)",
    "flask (>=3.1.3,<4.0.0)",
    "flask-cors (>=6.0.2,<7.0.0)",
    "cryptography (>=46.0.6,<47.0.0)",
    "python-pkcs11 (>=0.9.3,<0.10.0)"
]

[tool.poetry]
packages = [{include = "lithuanian_eid", from = "src"}]
include = [
  "eid-front.png",
  "key.pem",
  "cert.pem"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lteid_toolbox = 'lithuanian_eid.toolbox:run'
lteid_server = 'lithuanian_eid.signing_server:run'
