[project]
name = "lithuanian-eid"
version = "0.1.0"
description = ""
authors = [
    {name = "Tadas Sasnauskas",email = "tadas@yoyo.lt"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "pyscard>=2.2.0,<3.0.0",
    "pygobject>=3.50.0,<4.0.0",
    "flask>=3.1.0,<4.0.0",
    "flask-cors",
    "cryptography>=46.0.6,<47.0.0",
    "asn1crypto>=1.5.0",
    "PyKCS11>=1.5.10"
]

[tool.poetry]
packages = [{include = "lithuanian_eid", from = "src"}]
include = [
  "tests/",
  "support/",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lteid_toolbox = 'lithuanian_eid.toolbox:run'
lteid_server = 'lithuanian_eid.signing_server:run'
